applications/prefect/server/12_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prefect-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prefect-server
  template:
    metadata:
      labels:
        app: prefect-server
    spec:
      containers:
      - name: prefect-server
        image: prefecthq/prefect:latest
        command: ["prefect", "server", "start"]
        ports:
        - containerPort: 4200
          name: api
        - containerPort: 5432
          name: db
