applications/prefect/server/13_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prefect-server
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 4200
      targetPort: 4200
      protocol: TCP
      name: api
  selector:
    app: prefect-server
