applications/prefect/server/14_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ec2-3-91-194-241.compute-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prefect-server
            port:
              number: 4200
